# HorizonLang

./: .gitignore  CMakeLists.txt  GRAMMARS.md  Program.hl  README.md  main.cpp
ast/: AST.h  ASTprint.cpp  ASTprint.h
codegen/: PythonCodegen.cpp  PythonCodegen.h
codegen/CPP/: CppCodeGen.cpp  CppCodeGen.h
codegen/Python/: PythonCodegen.cpp  PythonCodegen.h
examples/: A_Star.hl  BubbleSort.hl  DecimalToBinary.hl  ExpressionEvaluator.hl  Factorial.hl  FibonacciSeries.hl  GCD.hl  MatrixMultiplication.hl  MazeGame.hl  Neural_Network.hl  NumberGuessingGame.hl  OddOrEven.hl  PolynomialCalculator.hl  SelectionSort.hl  StringReverse.hl  hello.hl
lexer/: Lexer.cpp  Lexer.h  Token.h  Token_Utils.h
parser/: Parser.cpp  Parser.h
semantic/: SemanticAnalyzer.cpp  SemanticAnalyzer.h
